{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 27,
  "lineage": "449ecb29-7acd-454c-f91f-ae4f633a1793",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f567f93fe3b78f99",
            "association_id": "eipassoc-06e9c8456f5c34d09",
            "domain": "vpc",
            "id": "eipalloc-0f567f93fe3b78f99",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06992703c80c07f94",
            "private_dns": "ip-10-0-0-146.ec2.internal",
            "private_ip": "10.0.0.146",
            "public_dns": "ec2-52-44-35-94.compute-1.amazonaws.com",
            "public_ip": "52.44.35.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d80714a054d3360c",
            "arn": "arn:aws:ec2:us-east-1:110348336223:instance/i-01d53ae9155bab987",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d53ae9155bab987",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0995c5be92b833923",
            "private_dns": "ip-172-31-0-153.ec2.internal",
            "private_ip": "172.31.0.153",
            "public_dns": "ec2-44-200-16-8.compute-1.amazonaws.com",
            "public_ip": "44.200.16.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00bce8cc6d1361397",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074d1e85d7480f026",
            "tags": {
              "Enviroment": "Dev",
              "Name": "Dev-ec2-instance",
              "Project": "Dev"
            },
            "tags_all": {
              "Enviroment": "Dev",
              "Name": "Dev-ec2-instance",
              "Project": "Dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dbb1dda1baee6120"
            ]
          },
          "dependencies": [
            "data.aws_ami.windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:internet-gateway/igw-059f457ea45ce8fc6",
            "id": "igw-059f457ea45ce8fc6",
            "owner_id": "110348336223",
            "vpc_id": "vpc-0d55badcf8be88733"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f567f93fe3b78f99",
            "connectivity_type": "public",
            "id": "nat-0d39af15ef7acb9cf",
            "network_interface_id": "eni-06992703c80c07f94",
            "private_ip": "10.0.0.146",
            "public_ip": "52.44.35.94",
            "subnet_id": "subnet-0e16afdb38de51587"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:route-table/rtb-0221feb6cd6fa3cd7",
            "id": "rtb-0221feb6cd6fa3cd7",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d39af15ef7acb9cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d55badcf8be88733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main",
            "aws_eip.nateIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:route-table/rtb-034583e01ed15864c",
            "id": "rtb-034583e01ed15864c",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059f457ea45ce8fc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d55badcf8be88733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0727a44b9cc3489",
            "route_table_id": "rtb-0221feb6cd6fa3cd7",
            "subnet_id": "subnet-0d6eadffb43817b6d"
          },
          "dependencies": [
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main",
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e18b61cb10f422f0",
            "route_table_id": "rtb-034583e01ed15864c",
            "subnet_id": "subnet-0e16afdb38de51587"
          },
          "dependencies": [
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main",
            "aws_internet_gateway.IGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:subnet/subnet-0d6eadffb43817b6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.192/26",
            "id": "subnet-0d6eadffb43817b6d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "vpc_id": "vpc-0d55badcf8be88733"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:subnet/subnet-0e16afdb38de51587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "id": "subnet-0e16afdb38de51587",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "vpc_id": "vpc-0d55badcf8be88733"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110348336223:vpc/vpc-0d55badcf8be88733",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0672302b08fe8d784",
            "default_route_table_id": "rtb-03d48e9c2d5f2c977",
            "default_security_group_id": "sg-0fc3f37e8abf59536",
            "dhcp_options_id": "dopt-0995996585f218053",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d55badcf8be88733",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d48e9c2d5f2c977",
            "owner_id": "110348336223"
          }
        }
      ]
    }
  ]
}